--- a/tests/org.eclipse.incquery.testing.queries/plugin.xml
+++ b/tests/org.eclipse.incquery.testing.queries/plugin.xml
@@ -3,34 +3,10 @@
 <plugin>
 
    <extension
-         id="UnexpectedMatchRecord"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.testing.queries.unexpectedmatchrecord.UnexpectedMatchRecordQuerySpecification$Provider"
-            id="org.eclipse.incquery.testing.queries.UnexpectedMatchRecord">
-      </matcher>
-   </extension>
-   <extension
-         id="RecordRoleValue"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.testing.queries.recordrolevalue.RecordRoleValueQuerySpecification$Provider"
-            id="org.eclipse.incquery.testing.queries.RecordRoleValue">
-      </matcher>
-   </extension>
-   <extension
-         id="SubstitutionValue"
-         point="org.eclipse.incquery.runtime.queryspecification">
-      <matcher
-            querySpecificationProvider="org.eclipse.incquery.testing.queries.substitutionvalue.SubstitutionValueQuerySpecification$Provider"
-            id="org.eclipse.incquery.testing.queries.SubstitutionValue">
-      </matcher>
-   </extension>
-   <extension
          id="org.eclipse.incquery.testing.queries.UnexpectedMatchRecord"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.testing.queries.unexpectedmatchrecord.UnexpectedMatchRecordQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.testing.queries.util.UnexpectedMatchRecordQuerySpecification$Provider"
             id="org.eclipse.incquery.testing.queries.UnexpectedMatchRecord">
       </matcher>
    </extension>
@@ -38,7 +14,7 @@
          id="org.eclipse.incquery.testing.queries.RecordRoleValue"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.testing.queries.recordrolevalue.RecordRoleValueQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.testing.queries.util.RecordRoleValueQuerySpecification$Provider"
             id="org.eclipse.incquery.testing.queries.RecordRoleValue">
       </matcher>
    </extension>
@@ -55,7 +31,7 @@
          id="org.eclipse.incquery.testing.queries.SubstitutionValue"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.testing.queries.substitutionvalue.SubstitutionValueQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.testing.queries.util.SubstitutionValueQuerySpecification$Provider"
             id="org.eclipse.incquery.testing.queries.SubstitutionValue">
       </matcher>
    </extension>
