--- a/papyrus-uml/org.eclipse.incquery.examples.uml.queries/plugin.xml
+++ b/papyrus-uml/org.eclipse.incquery.examples.uml.queries/plugin.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin>
 
-  
    <extension
          id="org.eclipse.incquery.examples.uml.queries.superClass"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.superclass.SuperClassQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.SuperClassQuerySpecification$Provider"
             id="org.eclipse.incquery.examples.uml.queries.superClass">
       </matcher>
    </extension>
@@ -14,7 +13,7 @@
          id="org.eclipse.incquery.examples.uml.queries.transitiveSuperClass"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.transitivesuperclass.TransitiveSuperClassQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.TransitiveSuperClassQuerySpecification$Provider"
             id="org.eclipse.incquery.examples.uml.queries.transitiveSuperClass">
       </matcher>
    </extension>
@@ -22,7 +21,7 @@
          id="org.eclipse.incquery.examples.uml.queries.superOrEqualClass"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.superorequalclass.SuperOrEqualClassQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.SuperOrEqualClassQuerySpecification$Provider"
             id="org.eclipse.incquery.examples.uml.queries.superOrEqualClass">
       </matcher>
    </extension>
@@ -30,7 +29,7 @@
          id="org.eclipse.incquery.examples.uml.queries.ownsOperation"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.ownsoperation.OwnsOperationQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.OwnsOperationQuerySpecification$Provider"
             id="org.eclipse.incquery.examples.uml.queries.ownsOperation">
       </matcher>
    </extension>
@@ -38,7 +37,7 @@
          id="org.eclipse.incquery.examples.uml.queries.ownsProperty"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.ownsproperty.OwnsPropertyQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.OwnsPropertyQuerySpecification$Provider"
             id="org.eclipse.incquery.examples.uml.queries.ownsProperty">
       </matcher>
    </extension>
@@ -46,7 +45,7 @@
          id="org.eclipse.incquery.examples.uml.queries.hasOperation"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.hasoperation.HasOperationQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.HasOperationQuerySpecification$Provider"
             id="org.eclipse.incquery.examples.uml.queries.hasOperation">
       </matcher>
    </extension>
@@ -54,7 +53,7 @@
          id="org.eclipse.incquery.examples.uml.queries.hasProperty"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.hasproperty.HasPropertyQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.HasPropertyQuerySpecification$Provider"
             id="org.eclipse.incquery.examples.uml.queries.hasProperty">
       </matcher>
    </extension>
@@ -62,7 +61,7 @@
          id="org.eclipse.incquery.examples.uml.queries.emptyClass"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.emptyclass.EmptyClassQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.EmptyClassQuerySpecification$Provider"
             id="org.eclipse.incquery.examples.uml.queries.emptyClass">
       </matcher>
    </extension>
@@ -70,7 +69,7 @@
          id="org.eclipse.incquery.examples.uml.queries.nonEmptyClass"
          point="org.eclipse.incquery.runtime.queryspecification">
       <matcher
-            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.nonemptyclass.NonEmptyClassQuerySpecification$Provider"
+            querySpecificationProvider="org.eclipse.incquery.examples.uml.queries.util.NonEmptyClassQuerySpecification$Provider"
             id="org.eclipse.incquery.examples.uml.queries.nonEmptyClass">
       </matcher>
    </extension>
