[403324] Supporting child-only elements

--- a/plugins/org.eclipse.incquery.viewers.runtime/plugin.xml
+++ b/plugins/org.eclipse.incquery.viewers.runtime/plugin.xml
@@ -21,6 +21,12 @@
                name="label"
                type="string">
          </annotationparameter>
+         <annotationparameter
+               mandatory="false"
+               multiple="false"
+               name="hierarchy"
+               type="string">
+         </annotationparameter>
       </annotation>
       <annotation
             description="An annotation describing a containment relation between two items."
