--- a/plugins/org.eclipse.incquery.viewers.runtime/plugin.xml
+++ b/plugins/org.eclipse.incquery.viewers.runtime/plugin.xml
@@ -22,6 +22,7 @@
                type="string">
          </annotationparameter>
          <annotationparameter
+               description="Describes whether an item should display only as &apos;root&apos; (top-level) element, only as &apos;child&apos; (not root but as a child) or &apos;always&apos;."
                mandatory="false"
                multiple="false"
                name="hierarchy"
