Updated extra site config to support mirroring of integration builds

--- a/releng/org.eclipse.incquery.update.extras/pom.xml
+++ b/releng/org.eclipse.incquery.update.extras/pom.xml
@@ -79,7 +79,7 @@
 						<configuration>
 						<source>
 							<repository>
-								<url>${site_url}</url>
+								<url>${extra_site_url}</url>
 								<layout>p2</layout>
 							</repository>
 						</source>
