--- a/bpm/org.eclipse.incquery.examples.bpm/plugin.properties
+++ b/bpm/org.eclipse.incquery.examples.bpm/plugin.properties
@@ -5,4 +5,4 @@
 # $Id$
 
 pluginName = EMF-IncQeury Query-based Feature BPM Model
-providerName = www.incquery.net
+providerName = Budapest University of Technology and Economics
