[409924] added xtend-gen to classpath

--- a/bpm/org.eclipse.incquery.examples.bpm.tests/build.properties
+++ b/bpm/org.eclipse.incquery.examples.bpm.tests/build.properties
@@ -3,5 +3,6 @@ bin.includes = META-INF/,\
                model/,\
                queries/
 source.. = src/,\
-           src-gen/
+           src-gen/,\
+           xtend-gen/
 output.. = bin/
