[398742] added query-based feature runtime tests

--- a/bpm/org.eclipse.incquery.examples.bpm.tests/plugin.xml
+++ b/bpm/org.eclipse.incquery.examples.bpm.tests/plugin.xml
@@ -25,5 +25,13 @@
             id="org.eclipse.incquery.examples.bpm.queries.jobTasks">
       </matcher>
    </extension>
+   <extension
+         id="org.eclipse.incquery.examples.bpm.queries.entryTask"
+         point="org.eclipse.incquery.runtime.queryspecification">
+      <matcher
+            querySpecificationProvider="org.eclipse.incquery.examples.bpm.queries.util.EntryTaskQuerySpecification$Provider"
+            id="org.eclipse.incquery.examples.bpm.queries.entryTask">
+      </matcher>
+   </extension>
 
 </plugin>
