--- a/bpm/org.eclipse.incquery.examples.bpm.tests/build.properties
+++ b/bpm/org.eclipse.incquery.examples.bpm.tests/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                .,\
                model/,\
-               queries/
+               queries/,\
+               plugin.xml
 source.. = src/,\
            src-gen/,\
            xtend-gen/
