--- a/bpm/org.eclipse.incquery.examples.bpm.incquery/build.properties
+++ b/bpm/org.eclipse.incquery.examples.bpm.incquery/build.properties
@@ -1,6 +1,7 @@
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               queries/
 source.. = src/,\
            src-gen/
 output.. = bin/
