--- a/releng/org.eclipse.incquery.update/pom.xml
+++ b/releng/org.eclipse.incquery.update/pom.xml
@@ -147,6 +147,25 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>unzipping</id>
+								<phase>package</phase>
+								<configuration>
+									<tasks>
+										<unzip src="${project.build.directory}/signed/site_assembly.zip" dest="${project.build.directory}/repository" />
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
